--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ nav {
   font-size: 13px;
   font-weight: 500;
   letter-spacing: 1px;
-  cursor: default !important;
+  /* cursor: default !important; */
 }
 .header-button2 {
   margin-top: -20px;
@@ -116,8 +116,9 @@ nav {
   box-shadow: 0px 4px 10px rgba(173, 216, 230, 0.8);
 }
 
-.search-icon {
-  background-color: #FAF0FD;
+.search-icon,
+.search-icon2 {
+  background-color: #faf0fd;
   color: #cc6dea;
   border-radius: 50%;
   padding: 10px;
@@ -126,8 +127,9 @@ nav {
   cursor: pointer;
 }
 
-.search-input {
-  display: none; 
+.search-input,
+.search-input2 {
+  display: none;
   margin-right: 10px;
   padding: 5px 8px;
   width: 200px;
@@ -158,7 +160,6 @@ nav {
     height: 5px;
     background-color: #cc6dea !important;
     border-radius: 50%;
-    
   }
   #active {
     margin-top: 0px !important;
@@ -166,7 +167,7 @@ nav {
   /* #active:focus {
     padding-left: 10px !important;
   } */
-  .nav-link{
+  .nav-link {
     padding-left: 10px !important;
   }
   /* .nav-item .nav-link:focus{
@@ -187,7 +188,7 @@ nav {
 
 /* //////////// Main Section //////////////// */
 .main {
-  max-width: 100%;
+  width: 100%;
   background-image: url(../images/hero.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -205,9 +206,20 @@ nav {
 
 .child1 img {
   width: 100%;
-  /* height: 100% !important; */
-  /* margin-bottom: -20px; */
-  /* top: 100% !important; */
+ 
+}
+
+.main-text p {
+  /* font-weight: 500;
+  font-size: 15px; */
+  /* color: rgb(172, 168, 168); */
+  margin-bottom: 3px;
+  letter-spacing: 1px;
+  color: #000000cc;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25.6px;
+  font-family: "Inter";
 }
 
 @media (max-width: 991px) {
@@ -229,6 +241,7 @@ nav {
   .child1 {
     display: flex !important;
     justify-content: flex-end !important;
+    margin-top: -60px !important;
     margin-right: 0 !important;
     margin-left: auto !important;
   }
@@ -250,21 +263,20 @@ nav {
   .back {
     right: -10px !important;
   }
+  
+.child1 img {
+  margin-top: 50px !important;
+ 
 }
-.main-text h2 {
+}
+/* .main-text h2 {
   font-weight: 600;
-  font-size: 1.9em;
+  font-size: 24px !important;
   color: #fff;
   letter-spacing: 1px;
   line-height: 40px;
-}
-.main-text p {
-  font-weight: 500;
-  font-size: 15px;
-  color: rgb(172, 168, 168);
-  margin-bottom: 3px;
-  letter-spacing: 1px;
-}
+} */
+
 .main-btn {
   text-decoration: none;
   display: inline-block;
@@ -286,7 +298,7 @@ nav {
 .main-btn:hover {
   background-color: #cc6dea;
   transition: 1s;
-  cursor: default;
+  cursor: pointer;
 }
 .main-footer {
   background: linear-gradient(90deg, #cc6dea80 15%, #5be2e480);
@@ -328,10 +340,10 @@ nav {
 .srart-learning {
   background-color: #cc6dea;
   color: #fff;
-  border-radius: 20px;
+  border-radius: 50px;
   font-weight: 500;
   letter-spacing: 1px;
-  cursor: pointer;
+  cursor: pointer !important;
   width: 283px;
   height: 80px;
 }
@@ -348,7 +360,7 @@ nav {
 }
 
 .slideshow-container img {
-  transition: opacity 0.75s ease-in-out; 
+  transition: opacity 0.75s ease-in-out;
   opacity: 1;
 }
 
@@ -359,7 +371,15 @@ nav {
   margin-top: 120px !important;
   letter-spacing: 2px !important;
 }
+#srart-learning{
+  cursor: pointer !important;
+}
 @media (max-width: 768px) {
+  .main-text p {
+    font-size: 16px !important;
+    line-height: 37px !important;
+    font-weight: 400 !important;
+  }
   .srart-learning {
     width: 127px;
     height: 33px;
@@ -443,7 +463,6 @@ nav {
   .slideshow-vidoe {
     height: 226.32px !important;
     width: 600px;
-
   }
   .teacher-img {
     width: 100% !important;
@@ -502,7 +521,7 @@ nav {
 .card:hover {
   margin-top: -30px !important;
   transition: 0.7s;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.158);
+  box-shadow: 0px 6px 4px rgba(204, 109, 234, 0.1);
 }
 .card-title {
   font-family: Roboto !important;
@@ -511,7 +530,7 @@ nav {
   line-height: 28.8px !important;
   color: #0f172a !important;
 }
-#card-title{
+#card-title {
   margin-bottom: 3px !important;
 }
 .card-span {
@@ -592,13 +611,15 @@ nav {
 .review-mobile {
   display: none;
 }
+.course-mobile {
+  display: none;
+}
+.course-pc {
+  display: block;
+}
 .review-comp {
   display: block;
 }
-/* .img-fluid {
-  max-width: 100%;
-  height: auto;
-} */
 .review-mobile span {
   text-align: start;
 }
@@ -626,7 +647,7 @@ nav {
   }
 
   .review-text {
-    font-size: 16px !important;
+    font-size: 18px !important;
     text-align: start;
     text-wrap: nowrap;
     font-weight: 400 !important;
@@ -640,9 +661,9 @@ nav {
     margin-bottom: 30px !important;
   }
   .review-span {
-    font-size: 10px !important;
+    font-size: 13px !important;
     font-weight: 400 !important;
-    line-height: 11.72px !important;
+    line-height: 15px !important;
     font-family: Roboto !important;
     color: #00000080 !important;
     margin-top: -5px !important;
@@ -653,12 +674,13 @@ nav {
   }
   .review-mobile {
     display: block;
-    /* width: 95% !important; */
     margin-left: 15px;
   }
   .review-img-parent {
-    /* width: 40%; */
     height: auto;
+  }
+  .card-title {
+    font-size: 16px !important;
   }
   .review-img-parent img {
     width: 100%;
@@ -700,14 +722,6 @@ nav {
   }
 }
 
-/* @media (max-width: 1030px) {
-  .review-card {
-    min-width: 400px !important;
-  }
-} */
-
-
-
 .clear-icon {
   display: none;
   justify-content: center;
@@ -735,8 +749,11 @@ nav {
 }
 .icon {
   margin-left: 10px;
-  font-size: 20px;
-  margin-right: 15px;
+  font-size: 22px;
+  margin-right: 5px;
+  width: 25px !important;
+  height: 25px !important;
+  /* border-radius: 13px !important; */
 }
 .navbar-brand.logo {
   font-family: "Chewy";
@@ -757,7 +774,7 @@ nav {
 #last {
   margin-right: 20px;
 }
-.master{
+.master {
   width: 96%;
   margin-left: 22px !important;
 }
@@ -808,23 +825,14 @@ nav {
     font-size: 14px !important;
     font-family: Roboto !important;
   }
-  .master{
+  .master {
     width: 90%;
     margin-left: 22px !important;
   }
 }
 @media (max-width: 654px) {
-  /* .review-card {
-    width: 95% !important;
-  } */
-  /* .courses-header-text {
-    margin: 0 5px !important;
-  }
-  .review-img-parent{
-    width: ;
-  } */
   .review-img-parent img {
-    width: 500px !important;
+    width: 750px !important;
     height: 140.12px !important;
   }
   .card-span {
@@ -832,8 +840,34 @@ nav {
   }
 }
 
+.swiper-container {
+  position: relative;
+  padding-bottom: 50px;
+}
+
+.swiper-pagination {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
+  text-align: center;
+}
+
 .swiper-pagination-bullet {
-  display: none !important;
+  background: #000; 
+  opacity: 1;
+  margin: 0 5px; 
+  width: 15.07px !important;
+  height: 5.33px !important;
+  border-radius: 5px !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: #CC6DEA !important; 
+}
+.mySwiper2 .swiper-pagination {
+  display: none;
 }
 .col-md-7 {
   display: flex;
@@ -856,7 +890,7 @@ nav {
   gap: 10px;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 100%
+  width: 100%;
 }
 .explore-parent {
   display: flex;
@@ -871,7 +905,7 @@ nav {
   line-height: 23.44px;
   color: #cc6dea;
 }
-#Category{
+#Category {
   font-size: 18px !important;
 }
 
@@ -883,16 +917,18 @@ nav {
   margin: 0;
   margin-bottom: 10px;
 }
-.review-mobile{
+.review-mobile {
   display: none;
 }
-.review-pc{
+.review-pc {
   display: block;
 }
 
-
 @media (max-width: 768px) {
-  #Explore{
+  /* .mySwiper2 .swiper-pagination {
+    display: block;
+  } */
+  #Explore {
     font-size: 17px !important;
   }
   .col-md-3,
@@ -924,10 +960,10 @@ nav {
     margin-top: 47px;
     margin-left: -15px;
   }
-  .every{
+  .every {
     margin-left: -15px !important;
   }
-  .circle2{
+  .circle2 {
     width: 11.68px;
     height: 11.77px;
     margin-top: -50px !important;
@@ -936,45 +972,45 @@ nav {
   .review-mobile {
     display: block;
     margin-bottom: 50px !important;
-    /* margin-left: 130px !important; */
   }
-  .review-pc{
+  .review-pc {
     display: none;
   }
-  
-  .swiper-slide{
-    width: 98% !important;
+  .course-mobile {
+    display: block;
+  }
+  .course-pc {
+    display: none;
   }
 
-  .swiper-slide2{
+  .swiper-slide {
+    width: 95% !important;
+  }
+
+  .swiper-slide2 {
     width: 77% !important;
   }
 
   .review-card {
-    /* width: 100% !important; */
     flex-wrap: wrap;
-    /* margin-right: -130px !important; */
-    
   }
-  .card2{
+  .card2 {
     margin-left: -60px !important;
-    
   }
-  .card3{
+  .card3 {
     margin-left: -120px !important;
   }
-  .card4{
+  .card4 {
     margin-left: -180px !important;
   }
   /* //// Courses //// */
-  .card{
+  .card {
     width: 90% !important;
   }
   .card:hover {
     margin-top: 0px !important;
     transition: 1s !important;
     box-shadow: none !important;
-   
   }
 }
 
@@ -983,6 +1019,17 @@ nav {
   .col-4 {
     flex: 1 1 100%;
     max-width: 100%;
+  }
+  .swiper-slide {
+    width: 105% !important;
+  }
+  .swiper-slide2 {
+    width: 77% !important;
+  }
+  .main-text  p {
+    font-size: 10px !important;
+    line-height: 16px !important;
+    font-weight: 400 !important;
   }
 }
 .circle {
@@ -995,13 +1042,13 @@ nav {
   margin-top: 4px;
   margin-left: -8px;
 }
-.circle2{
+.circle2 {
   width: 25.21px;
   height: 25.41px;
   right: 60px;
   margin-top: -105px;
 }
-.collapsed{
+.collapsed {
   display: none !important;
 }
 @media (max-width: 992px) {
@@ -1019,17 +1066,17 @@ nav {
     padding-left: 20px !important;
     padding-top: 30px !important;
   }
-  .search-input {
+  .search-input,
+  .search-input2 {
     width: 150px;
   }
-  .collapsed{
+  .collapsed {
     display: flex !important;
   }
-   header{
-    /* position: fixed !important; */
+  header {
     background-color: transparent !important;
-   }
-  #active{
+  }
+  #active {
     margin-top: 0px !important;
   }
 
@@ -1049,7 +1096,7 @@ nav {
     flex-direction: column;
     align-items: flex-start;
   }
-  .nav-ul{
+  .nav-ul {
     margin-bottom: 5px !important;
   }
   .header .nav-ul {
@@ -1062,20 +1109,17 @@ nav {
 }
 /* ///////////////////// */
 .menu-icon {
-  display: block !important; 
-  /* background-color: #c208c2; */
+  display: block !important;
 }
 
 .close-icon {
   display: none !important;
-  /* background-color: #c208c2; */
   background-color: rgb(2, 0, 90);
   z-index: 10;
 }
 
 .show-icon {
   display: block !important;
-  /* background-color: #c208c2; */
 }
 
 .hide-icon {
@@ -1085,12 +1129,10 @@ nav {
 
 /* ////////////////////////// */
 .menu-icon {
-  /* display: block !important;  */
   width: 40px;
   padding: 0px 12px !important;
   text-align: center;
-  /* background-color: #c208c2; */
-  background-color: #000000;
+  background-color: #cc6dea;
   border-radius: 8px;
   margin-bottom: -5px !important;
   margin-top: -20px !important;
@@ -1126,85 +1168,165 @@ nav {
   color: #fff !important;
 }
 @media (max-width: 480px) {
-  #middle h2, #first h2, #last h2 {
+  #middle h2,
+  #first h2,
+  #last h2 {
     font-weight: 800 !important;
     font-size: 15px !important;
     margin-bottom: 8px !important;
-}
+  }
 }
 
 @media (max-width: 480px) {
-  .profile-container{
+  .profile-container {
     margin-left: -50px !important;
     padding-left: 15px !important;
   }
+  .search-input,
+  .search-input2 {
+    width: 120px;
+  }
 }
 @media (max-width: 434px) {
-  .card2{
+  .card2 {
     margin-left: -40px !important;
-    
   }
-  .card3{
+  .card3 {
     margin-left: -80px !important;
   }
-  .card4{
+  .card4 {
     margin-left: -120px !important;
   }
 }
 
 .head_img {
-  margin-top: -18px !important
+  margin-top: -18px !important;
 }
 
 @media (max-width: 426px) {
   .head_img {
-    margin-top: 0px !important
-}
+    margin-top: 0px !important;
+  }
 }
 
 @media (max-width: 398px) {
-  #middle h2, #first h2, #last h2 {
+  #middle h2,
+  #first h2,
+  #last h2 {
     font-size: 13px !important;
-}
+  }
 }
 @media (max-width: 353px) {
-  #middle h2, #first h2, #last h2 {
+  #middle h2,
+  #first h2,
+  #last h2 {
     font-size: 12px !important;
-}
+  }
 }
 
 /* ////////////// */
 
 @media (min-width: 1200px) {
-  .container, .container-lg, .container-md, .container-sm, .container-xl {
-      max-width: 1300px !important;
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1350px !important;
   }
 }
 @media (min-width: 992px) {
-  .container, .container-lg, .container-md, .container-sm {
-      max-width: 960px !important;
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 960px !important;
   }
 }
 @media (min-width: 768px) {
-  .container, .container-md, .container-sm {
-      max-width: 720px !important;
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: 720px !important;
   }
 }
 
 @media (min-width: 576px) {
-  .container, .container-sm {
-      max-width: 1350px !important;
+  .container,
+  .container-sm {
+    max-width: 1350px !important;
   }
 }
+/* .insta{
+  background-image: linear-gradient(to top right, #F56040, #FD9644, #FDCB58, #8A6FDF, #C13584, #4A6ACF);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+} */
 
-@media (max-width: 1300px) {
-  .container2{
-    max-width: 1200px !important;
+@media (max-width: 1500px) {
+  .container2 {
+    max-width: 1260px !important;
   }
 }
 @media (max-width: 1200px) {
-  .container2{
+  .container2 {
     max-width: 1000px !important;
   }
 }
+.search-input2 {
+  display: none;
+}
 
+.search-input2.visible {
+  display: block;
+}
+
+.swiper-container , .swiper-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.swiper-slide {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  /* margin-left: 30px !important; */
+  /* margin: auto !important; */
+}
+/* .swiper-slide3{
+  margin-left: 50px !important;
+} */
+/* .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-container {
+  width: 100%;
+  height: 100%;
+} */
+
+/* .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.review-card2 {
+  border: 1px solid #8b8b8b46;
+  border-radius: 15px;
+  background-color: #fff;
+}
+
+
+.profile-img {
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.about-review-info-card-span {
+  font-size: 16px;
+  line-height: 1.5;
+}
+/* ظظظظظظظظظظظظظظظ */
